compile with Java 1.8